@@ -99,9 +99,9 @@ $(srcdir)/user-refman.stamp: $(srcdir)/$(DOXYFILE).in $(REFMAN_deps)
 	test -f $(USER_REFMAN).tmp/latex/refman.tex
 	rm -rf $(srcdir)/$(USER_REFMAN)
 ## Fix path to the main page of the documentation.
-	sed -i -e "s,\@relcommondocpath\@,../../../../doc/,g" \
-	       -e "s,\@userrefman\@,$(USER_REFMAN),g" \
-		`find $(USER_REFMAN).tmp -name '*.html'`
+	perl -pi -e "s,\@relcommondocpath\@,../../../../doc/,g;"	\
+	         -e "s,\@userrefman\@,$(USER_REFMAN),g"			\
+	  `find $(USER_REFMAN).tmp -name '*.html'`
 ## FIXME: Moving directories between file systems is not portable.
 	mv $(USER_REFMAN).tmp $(srcdir)/$(USER_REFMAN)
 	@mv -f $@.tmp $@
@@ -182,9 +182,9 @@ $(srcdir)/devel-refman.stamp: $(srcdir)/$(DOXYFILE).in $(REFMAN_deps)
 	test -f $(DEVEL_REFMAN).tmp/latex/refman.tex
 	rm -rf $(srcdir)/$(DEVEL_REFMAN)
 ## Fix path to the main page of the documentation.
-	sed -i -e "s,\@relcommondocpath\@,../../../../doc/,g" \
-	       -e "s,\@userrefman\@,$(DEVEL_REFMAN),g" \
-		$(DEVEL_REFMAN).tmp/html/index.html
+	perl -pi -e "s,\@relcommondocpath\@,../../../../doc/,g;"	\
+	         -e "s,\@userrefman\@,$(DEVEL_REFMAN),g"		\
+	  $(DEVEL_REFMAN).tmp/html/index.html
 ## FIXME: Moving directories between file systems is not portable.
 	mv $(DEVEL_REFMAN).tmp $(srcdir)/$(DEVEL_REFMAN)
 	@mv -f $@.tmp $@
@@ -238,9 +238,9 @@ install-data-local:
 		$(DESTDIR)$(htmldir)/scribo/$(USER_REFMAN)
 ## Fix path to the main page of the documentation.
 	chmod -R u+w $(DESTDIR)$(htmldir)/scribo/$(USER_REFMAN)
-	sed -i -e "s,../../../../doc/$(USER_REFMAN)/html,../../$(USER_REFMAN),g" \
-	       -e "s,../../../../milena/doc/$(USER_REFMAN)/html,../../milena/$(USER_REFMAN)/,g" \
-		`find $(DESTDIR)$(htmldir)/scribo/$(USER_REFMAN) -name '*.html'`
+	perl -pi -e "s,../../../../doc/$(USER_REFMAN)/html,../../$(USER_REFMAN),g;" \
+	         -e "s,../../../../milena/doc/$(USER_REFMAN)/html,../../milena/$(USER_REFMAN)/,g" \
+	  `find $(DESTDIR)$(htmldir)/scribo/$(USER_REFMAN) -name '*.html'`
 # Other HTML directories can be processed uniformly.
 	for d in $(DATA_html_dirs_inst); do			\
 	  rm -rf $(DESTDIR)$(htmldir)/scribo/$$d;	\
@@ -265,6 +265,7 @@ uninstall-local:
 
 
 doc-teamcity:
-	sed -i -e "s,../../../../milena/doc/$(USER_REFMAN)/html,../milena.doc,g" \
-	       -e "s,../../../../doc/$(USER_REFMAN)/html,../olena.doc,g" \
-		`find  $(srcdir)/$(USER_REFMAN) -name '*.html'`
+	perl -pi							     \
+	  -e "s,../../../../milena/doc/$(USER_REFMAN)/html,../milena.doc,g;" \
+	  -e "s,../../../../doc/$(USER_REFMAN)/html,../olena.doc,g"	     \
+	  `find  $(srcdir)/$(USER_REFMAN) -name '*.html'`
